fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ p, h1, h2, h3, h4, h5, h6 {
   height: fit-content;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 10px;
-  overflow: hidden;
+  overflow-y: auto;
   /* -------------------- HEADER COMPONENT ------------------ */
   /* -------------------- CARD COMPONENT ------------------ */
 }
